--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="keywords" content="developer jobs github stackoverflow jobs find developer job remote jobs">
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta http-equiv="refresh" content="0; url=https://devjob.netlify.app/">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="This website is developer for finding developer jobs easily."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>DEVJOBS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
