--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="keywords" content="developer jobs github stackoverflow jobs find developer job remote jobs">
     <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="google-site-verification" content="42kX3v7iF0ctozzBXlY_EzJf8pi06K4yRYjz3q7MpaM" />
     <meta
       name="description"
       content="This website is developer for finding developer jobs easily."
