--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
       name="description"
       content="This website is developer for finding developer jobs easily."
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,6 +30,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176908421-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-176908421-1');
+    </script>
     <title>DEVJOBS</title>
   </head>
   <body>
